--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,11 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    implementation 'com.google.android.material:material:1.2.0-alpha02'
+    implementation 'com.android.support:multidex:1.0.3'
+
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+
     /*Firebase Libraries*/
     implementation 'com.google.firebase:firebase-analytics:17.2.3'
     implementation 'com.google.firebase:firebase-auth:19.3.0'
@@ -54,11 +59,16 @@ dependencies {
 
     //dependency for display map and core code
     implementation("com.tomtom.online:sdk-maps:2.4417")
-
     //dependency for traffic
     implementation("com.tomtom.online:sdk-traffic:2.4417")
-
     //dependency for search
     implementation("com.tomtom.online:sdk-search:2.4417")
+    //dependency for routing
+    implementation("com.tomtom.online:sdk-routing:2.4438")
+
+
+    implementation 'com.github.Ferfalk:SimpleSearchView:0.1.4'
+
+    implementation 'de.hdodenhof:circleimageview:1.3.0'
 
 }
