--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.zakariazarrouki.map">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,9 +23,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.activity.MainActivity">
-
-        </activity>
+        <activity android:name=".view.activity.MainActivity" android:theme="@style/NoActionBar"/>
 
         <meta-data android:name="OnlineMaps.Key" android:value="yE77nkbhylSyrSCkNwbLLF8L4xm7u9oY" />
         <meta-data android:name="OnlineTraffic.Key" android:value="yE77nkbhylSyrSCkNwbLLF8L4xm7u9oY" />
